--- a/_posts/搭建极简个人博客.md
+++ b/_posts/搭建极简个人博客.md
@@ -1,14 +1,12 @@
-```
 ---
 layout: post
-title: 烟雨路
-date: 2022-04-23
-Author: 来自okone
+title: LOFFER文档
+date: 2019-06-02
+Author: 来自中世界
 categories: 
 tags: [sample, document]
 comments: true
 --- 
-```
 
 📖 目录 [[显示](https://www.kejiwanjia.com/jiaocheng/90975.html#)]
 
